welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:19: error: type mismatch;
 found   : Unit
 required: Int
  if(speed > 80){
  ^